--- a/ISoLA16/conclusion.tex
+++ b/ISoLA16/conclusion.tex
@@ -13,3 +13,11 @@ is taken with domain specialists, safety engineers, verification tool
 builders, all collaborating with RV researchers. Much work
 remains and the list of challenges is likely to grow even as
 researchers address many of the issues raised here are solved. 
+
+\paragraph{Acknowledgements:} The Copilot project  has
+been conducted in collaboration with Dr. Lee Pike (Galois).  Jonathan
+Laurent (ENS Paris)  and Chris Hathhorn (University of Missouri) did
+most of the coding of the {\tt Copilot.Theorem} module during the
+course of visits to NASA.   Georges-Axel Jaloyan is responsible for
+adding monitor verification during the course of a summer internship
+at NASA.  
