--- a/ISoLA16/copilot.tex
+++ b/ISoLA16/copilot.tex
@@ -101,7 +101,7 @@ the language.   The back-end translates a Copilot core program into the language
 Haskell-hosted EDSL, 
 Symbolic Bit Vectors (SBV),  an EDSL developed by Levent Erk\"{o}k, which we use to generate C
 monitors.  Aspects of the toolchain relevant to high assurance are covered in more
-detail later
+detail later.
 
 %We use the recent Safe Haskell compiler extensions to implement
 %Copilot~\cite{safe}.  Copilot's language package is explicitly \emph{Trustworthy
