--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -42,7 +42,7 @@ component that can be assured using conventional means that
 the SUO itself cannot be verified  by conventional
 means. Copilot~\cite{copilot, pike-isse-13} is an RV framework
 targeted at safety-critical hard real-realtime systems, which has
-served as a platform for investigation  conducted as a part of a
+served as an experimental  platform enabling  a
 research   program in  high-assurance RV.  
 
 
