--- a/ISoLA16/trace.tex
+++ b/ISoLA16/trace.tex
@@ -11,7 +11,7 @@ supports traceability from specification to monitor code.
  \paragraph{Challenge:} \emph{Support  traceability from the requirements  and system level analysis to the actual monitor code.}
 
  \paragraph{Copilot Approach:} Using SBV to generate C monitors may
- create many small files and it can quite difficult to relate this to
+ create many small files and it can be quite difficult to relate this to
  the specification. The code generation module has recently been
  revised to generate documentation that improves traceability. The
  user can insert labels in their specifications flow down to the
