--- a/ISoLA16/verispec.tex
+++ b/ISoLA16/verispec.tex
@@ -33,7 +33,7 @@ the proposition. Currently, proof engines  based on
 Satisfiability Modulo Theories (\textsc{smt})   are used to discharge
 proofs.  The Copilot prover was first introduced
 in~\cite{pike-rv-15}, where its utility was demonstrated in assuring
-notoriously subtle voting algorithms to be used for fault-tolerant RV.
+notoriously subtle voting algorithms.
 
 In the course of the analysis of the separation criteria, a team of
 domain experts used the PVS interactive prover to prove theorems that
