--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -57,7 +57,7 @@ safety-critical systems. We examine  how  these issues have been
 addressed in our own work   with the help of a running example. A
 theme of our research has been the 
 application of lightweight formal methods to achieve
-high-assurance  we identify opportunities for closer collaboration
+high-assurance and  we identify opportunities for closer collaboration
 between the RV and tool communities.   
 
 
