--- a/ISoLA16/codecorrect.tex
+++ b/ISoLA16/codecorrect.tex
@@ -98,7 +98,7 @@ information during monitor generation.
 
 \paragraph{Assurance All The Way Down:} 
 Having assured that the C code implementing the monitor is correct,
-how can we be sure that the executable binary code correctly
+how can we guarantee that the executable binary code correctly
 implements the C program?  For Copilot, we have experimented
 with using the verified Compcert compiler~\cite{leroy} to generate
 binaries.  Unfortunately, Compcert does not yet target many of the
