--- a/ISoLA16/opportunities.tex
+++ b/ISoLA16/opportunities.tex
@@ -17,11 +17,11 @@ really at the system level. Tools that can assist domain experts in
 validating safety properties are sorely needed.  As in our case study,
 the safety properties of cyber-physical systems are involve continuous
 mathematics. While advances in \textsc{smt} solvers have been
-impressive, it is still necessary to often resort to interactive
+impressive, it is still necessary to often resort to using an  interactive
 theorem prover. There are many opportunities to design
 domain specific decision procedures that would increase the utility of
 automated proof
-tools .  
+tools.  
 
 The problem of RV observability provides a rich source of problems for tool builders. If the RV
 approach involves instrumenting code, then static analysis can both
@@ -29,11 +29,11 @@ assist in the instrumentation and prove that the instrumentation did
 not affect the correctness of the code. If sampling, static analysis
 has the potential to inform when to sample.
 
-Floating point arithmetic
-is a source of problems that is readily amenable to static analysis.In
-our work, we applied abstract interpretation to monitor source code,
-but  analysis could be done at the specification level with
-proof obligations flowing down to the monitor code. 
+Floating point arithmetic is a source of problems that is readily
+amenable to static analysis and proof. In our work, we applied
+abstract interpretation to monitor source code, but analysis could be
+done at the specification level with proof obligations flowing down to
+the monitor code.
 
 Applying tools to verify monitor correctness makes so much sense that
 it should be de rigueur.  In Copilot, we applied deductive
