added github url

--- a/ISoLA16/copilot.tex
+++ b/ISoLA16/copilot.tex
@@ -69,7 +69,7 @@ thick ]
 
 Copilot is a domain specific language  embedded (EDSL) in the functional
 programming language Haskell   tailored to
-programming monitors for hard real-time, reactive systems.
+programming monitors for hard real-time, reactive systems.\footnote{\url{https://github.com/Copilot-Language}}
 
 Copilot is a \emph{stream} based language where a stream is an infinite sequence of values that must conform to the same type.  All transformations of
 data in Copilot must be propagated through streams. Copilot
