--- a/ISoLA16/conclusion.tex
+++ b/ISoLA16/conclusion.tex
@@ -17,7 +17,5 @@ researchers address many of the issues raised here are solved.
 \paragraph{Acknowledgements:} The Copilot project  has
 been conducted in collaboration with Dr. Lee Pike (Galois).  Jonathan
 Laurent (ENS Paris)  and Chris Hathhorn (University of Missouri) did
-most of the coding of the {\tt Copilot.Theorem} module during the
-course of visits to NASA.   Georges-Axel Jaloyan is responsible for
-adding monitor verification during the course of a summer internship
-at NASA.  
+most of the coding of the {\tt Copilot.Theorem}.   Georges-Axel
+Jaloyan  recently added the new  monitor verification capabilities. 
