--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -10,7 +10,7 @@ often placed on human operators of  many safety-critical systems.
 In practice, the verification and validation of avionics
 and other safety-critical software systems relies heavily on it being
 predicable and existing regulatory guidance,  such as
-DO-178~\cite{DO178B},  do not  have provisions to
+DO-178C~\cite{DO178B},  do not  have provisions to
 assure safety-critical systems that are not predictable at certification. 
 Yet technological advances are enabling the development of increasingly
 autonomous (IA) cyber-physical  systems that modify their behavior in response
