--- a/ISoLA16/paper.tex
+++ b/ISoLA16/paper.tex
@@ -133,7 +133,15 @@ Hampton, Virginia, USA, \\
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
-TBD
+Safety-critical systems are growing more complex and becoming   increasingly
+autonomous. Runtime Verification (RV) has the potential to provide
+protections when the a system cannot be assured by conventional means,
+but only if the RV itself can be trusted.  In this paper,  proffer a
+number of challenges to realizing high-assurance RV and illustrate how
+we have addressed them in our own investigations.  We argue that the
+high-assurance RV provides a rich target for static analysis tools and
+proof engines in hope of fostering closer collaboration between  among
+the communities. 
 \end{abstract}
 \input{intro}
 \input{copilot} 
