--- a/ISoLA16/spec.tex
+++ b/ISoLA16/spec.tex
@@ -5,7 +5,7 @@ well as a thorough safety assessment. Safety is a systems level
 property so if RV is to provide safety guarantees, then the monitor
 specifications must flow down from the requirements and safety
 analyses.  Indeed, Rushby's study~\cite{rvRushby,RushbyAIAA09}
-demonstrated that a convincing safety case~\cite{Kelly98arguingsafety}
+demonstrated that a convincing safety case
 for an IA system protected by RV demands evidence that the monitor
 specifications are derived from validated requirements and, in
 addition, that the monitor specifications should include checks of the
