adding stuff about RV tool

--- a/ISoLA16/FT.tex
+++ b/ISoLA16/FT.tex
@@ -25,7 +25,7 @@ fails.
  also be robust in the presence of hardware faults such as sensor failures
  and voltage spikes.  A \emph{fault-containment region} (FCR)
  is a region in a system designed to ensure faults do not propagate to
- other regions~\cite{Rushby01:buscompare}.   The 
+ other regions.  The 
  easiest way to ensure this is to physically isolate one FCR from
  another.  However, FCRs may need to communicate, hence they share
  channels. An FCR containing a monitor may need to share a channel
@@ -86,3 +86,6 @@ under varying environmental conditions.
 % Question: Are the monitors isolated from system under observation?
 %    }%
 % }
+
+
+%~\cite{Rushby01:buscompare}. 
