--- a/ISoLA16/paper.bib
+++ b/ISoLA16/paper.bib
@@ -2139,3 +2139,14 @@ month={March}
 } 
 
 %-----------------------------------
+
+@Misc{dot,
+  title = 	 {The {DOT} Language},
+  howpublished = {\url{http://www.graphviz.org/content/dot-language}}
+}
+
+@Misc{RV-Match,
+  Ttitle = 	 {{RV-Match}},
+  howpublished = {\url{http://runtimeverification.com/match/}
+}
+
