--- a/ISoLA16/paper.tex
+++ b/ISoLA16/paper.tex
@@ -136,7 +136,7 @@ Hampton, Virginia, USA, \\
 Safety-critical systems are growing more complex and becoming   increasingly
 autonomous. Runtime Verification (RV) has the potential to provide
 protections when the a system cannot be assured by conventional means,
-but only if the RV itself can be trusted.  In this paper,  proffer a
+but only if the RV itself can be trusted.  In this paper,  we proffer a
 number of challenges to realizing high-assurance RV and illustrate how
 we have addressed them in our own investigations.  We argue that the
 high-assurance RV provides a rich target for static analysis tools and
