--- a/ISoLA16/conclusion.tex
+++ b/ISoLA16/conclusion.tex
@@ -1,4 +1,4 @@
-\section{Conclusion}~\label{sec:conclusion}.  High-assurance RV has
+\section{Conclusion}~\label{sec:conclusion} High-assurance RV has
 the potential of becoming the avenue to assuring unpredictable and
 otherwise unassurable IA safety-critical systems. We have presented a
 number of challenges that we have identified as barriers to
