--- a/ISoLA16/paper.bib
+++ b/ISoLA16/paper.bib
@@ -2146,7 +2146,7 @@ month={March}
 }
 
 @Misc{RV-Match,
-  Ttitle = 	 {{RV-Match}},
-  howpublished = {\url{http://runtimeverification.com/match/}
+  title = 	 {{RV-Match}},
+  howpublished = {\url{http://runtimeverification.com/match/}}
 }
 
