--- a/ISoLA16/spec.tex
+++ b/ISoLA16/spec.tex
@@ -46,11 +46,11 @@ preserve safe aircraft separation, where the separation requirement
 for two aircraft is specified by a minimum horizontal separation $D$
 (typically, $5$ nautical miles).  Fortuitously, colleagues at NASA
 have discovered analytical formula, called
-\emph{criteria}~\cite{NM2011NASA} that characterize those
+\emph{criteria}~\cite{NM2011NASA}, that characterize those
 resolution maneuvers that both ensure safe separation when one
 aircraft maneuvers and ensures separation when two conflicting
 aircraft both maneuver. The criteria have been extensively validated
-by domain experts who applied sophisticated simulations as well as
+by domain experts who conducted  sophisticated simulations as well as
 performing formal mathematical proofs using the Prototype Verification
 System (PVS) theorem prover. We have encoded these conditions as
 Copilot specifications. The criteria for horizontal separation for two
