--- a/ISoLA16/paper.tex
+++ b/ISoLA16/paper.tex
@@ -135,12 +135,12 @@ Hampton, Virginia, USA, \\
 \begin{abstract}
 Safety-critical systems are growing more complex and becoming   increasingly
 autonomous. Runtime Verification (RV) has the potential to provide
-protections when the a system cannot be assured by conventional means,
-but only if the RV itself can be trusted.  In this paper,  we proffer a
+protections when a system cannot be assured by conventional means,
+but only if the RV itself can be trusted.  In this paper, we proffer a
 number of challenges to realizing high-assurance RV and illustrate how
-we have addressed them in our own investigations.  We argue that the
-high-assurance RV provides a rich target for static analysis tools and
-proof engines in hope of fostering closer collaboration between  among
+we have addressed them in our own research.  We argue that
+high-assurance RV provides a rich target for automated verification
+tools in hope of fostering closer collaboration  among
 the communities. 
 \end{abstract}
 \input{intro}
