--- a/ISoLA16/paper.bib
+++ b/ISoLA16/paper.bib
@@ -771,12 +771,6 @@ publisher = {IEEE Computer Society},
 }
 
 @misc{SAE4761,
-    address = {Warrendale, USA},
-    citeulike-article-id = {6819866},
-    keywords = {standard},
-    month = dec,
-    posted-at = {2010-03-12 08:24:45},
-    priority = {2},
     publisher = {Society of Automotive Engineers (SAE)},
     title = {{SAE ARP4761 Guidelines and Methods for Conducting the Safety Assessment Process on Civil Airborne Systems and Equipment}},
     year = {1996}
@@ -2076,7 +2070,7 @@ month={March}
 
 
 @MastersThesis{Kaveh15,
-  author = 	 {Kaveh Darefesheh},
+  author = 	 {Kaveh Darafsheh},
   title = 	 {Runtime Monitoring on Hard Real-Time Operating Systems},
   school = 	 {East Carolina University},
   year = 	 {2015}
