--- a/ISoLA16/paper.tex
+++ b/ISoLA16/paper.tex
@@ -126,7 +126,7 @@
 %
 \institute{
 NASA Langley Research Center,
-Hampton, Virginia, USA, \\
+Hampton, Virginia, USA\\
 \email{a.goodloe@nasa.gov}
 }
 \begin{document}
@@ -138,9 +138,9 @@ autonomous. Runtime Verification (RV) has the potential to provide
 protections when a system cannot be assured by conventional means,
 but only if the RV itself can be trusted.  In this paper, we proffer a
 number of challenges to realizing high-assurance RV and illustrate how
-we have addressed them in our own research.  We argue that
+we have addressed them in our research.  We argue that
 high-assurance RV provides a rich target for automated verification
-tools in hope of fostering closer collaboration  among
+tools in hope of fostering closer collaboration  among 
 the communities. 
 \end{abstract}
 \input{intro}
