--- a/ISoLA16/steer.tex
+++ b/ISoLA16/steer.tex
@@ -1,6 +1,6 @@
 \section{Additional Challanges }\label{sec:future} 
 The presentation so far has examined challenges in assured RV that
-have been addressed in our own research. In this section, we will
+have been addressed in our research. In this section, we will
 raise three of the key additional challenges that we have identified
 as critical to address in future work.
 
@@ -19,7 +19,7 @@ safe steering algorithm may be as difficult as constructing the
 adaptive autonomous algorithm itself.
 
 \paragraph{Challenge:}  \emph{Verifying the correctness and safety of the
-steering performed once a specification violation is detected.}
+steering performed  from any viable system sate once a specification violation is detected.}
  
 
 \paragraph{Predictive Monitors:} Applying RV to application domains
@@ -35,7 +35,7 @@ to predictive monitoring for controllers, but the general problem is
 very domain specific. Assured predictive monitoring remains a research
 challenge for the RV community.
 
-\paragraph{Challenge:} \emph{The monitor should detect violations of
+\paragraph{Challenge:} \emph{The monitor should detect impending violations of
   the specification and invoke the safety controller in time to
   preserve safe operation.}
 
