--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -1,27 +1,27 @@
-\section{Introduction}~\label{sec:intro} 
-Safety-critical systems, such as aircraft, automobiles, and medical
-devices, are those systems whose failure could result
-in loss of life, significant property damage, or damage to the
-environment~\cite{Knight2002}.  The  grave consequences of failure have compelled
-industry and regulatory authorities  to adapt conservative design
-approaches and exhaustive verification and validation (V\&V) procedures
-to prevent mishaps. In addition, strict licensing requirements are
-often placed on human operators of  many safety-critical systems.
-In practice, the verification and validation of avionics
-and other safety-critical software systems relies heavily on it being
-predicable and existing regulatory guidance,  such as
-DO-178C~\cite{DO178B},  do not  have provisions to
-assure safety-critical systems that are not predictable at certification. 
-Yet technological advances are enabling the development of increasingly
-autonomous (IA) cyber-physical  systems that modify their behavior in response
-to the external environment and learn from their experience.  While
-unmanned aircraft systems (UAS) and self-driving cars have the
-potential of transforming society in many beneficial ways, they also
-pose new dangers to public safety. The algorithmic methods such as
-machine learning that enable autonomy lack the salient feature of
-being predictable since the system's behavior depends on what it has
-learned.  Consequently, the  problem  of assuring safety-critical IA is
-both a barrier to industrial use of  as well as a research challenge~\cite{NRC14}.
+\section{Introduction}~\label{sec:intro} Safety-critical systems, such
+as aircraft, automobiles, and medical devices are those systems whose
+failure could result in loss of life, significant property damage, or
+damage to the environment~\cite{Knight2002}.  The grave consequences
+of failure have compelled industry and regulatory authorities to adapt
+conservative design approaches and exhaustive verification and
+validation (V\&V) procedures to prevent mishaps. In addition, strict
+licensing requirements are often placed on human operators of many
+safety-critical systems.  In practice, the verification and validation
+of avionics and other safety-critical software systems relies heavily
+on it being predicable and existing regulatory guidance, such as
+DO-178C~\cite{DO178B}, do not have provisions to assure
+safety-critical systems that do not exhibit predictable behavior at
+certification.  Yet technological advances are enabling the
+development of increasingly autonomous (IA) cyber-physical systems
+that modify their behavior in response to the external environment and
+learn from their experience.  While unmanned aircraft systems (UAS)
+and self-driving cars have the potential of transforming society in
+many beneficial ways, they also pose new dangers to public safety. The
+algorithmic methods such as machine learning that enable autonomy lack
+the salient feature of being predictable since the system's behavior
+depends on what it has learned.  Consequently, the problem of assuring
+safety-critical IA is both a barrier to industrial use  as well as a
+research challenge~\cite{NRC14}.
 
 
 \emph{Runtime verification} (RV)~\cite{monitors}, where monitors
@@ -36,29 +36,26 @@ architectural pattern for RV, where a monitor checks that the
 executing SUO satisfies a specification and if the property is
 violated, the RV system will switch control to a more conservative
 component that can be assured using conventional means that
-\emph{steers} the system into a safe state.
-
-\emph{High-assurance} RV provides an assured level of safety even when
-the SUO itself cannot be verified  by conventional
-means. Copilot~\cite{copilot, pike-isse-13} is an RV framework
-targeted at safety-critical hard real-realtime systems, which has
-served as an experimental  platform enabling  a
-research   program in  high-assurance RV.  
-
+\emph{steers} the system into a safe state. \emph{High-assurance} RV
+provides an assured level of safety even when the SUO itself cannot be
+verified by conventional means.
 
 \paragraph{Contributions:} During the course of our research we have
-been guided by the question ``what
- issues must be  addressed in a convincing argument  that  high-assurance RV can safeguard a
-system that cannot be otherwise assured?''  In this paper, we
-chronicle a number of  challenges we have identified that must be
-thoroughly addressed in order to actualize high-assurance RV.  We hope
-that this helps inform other researchers that wish to apply RV to
-safety-critical systems. We examine  how  these issues have been
-addressed in our own work   with the help of a running example. A
-theme of our research has been the 
-application of lightweight formal methods to achieve
-high-assurance and  we identify opportunities for closer collaboration
-between the RV and tool communities.   
+been guided by the question ``what issues must be addressed in a
+convincing argument that high-assurance RV can safeguard a system that
+cannot be otherwise assured?''  In this paper, we chronicle a number
+of challenges we have identified that must be thoroughly addressed in
+order to actualize high-assurance RV.  We hope that this helps inform
+other researchers that wish to apply RV to safety-critical
+systems.   We
+examine how these issues have been addressed in our work on  the
+Copilot RV framework~\cite{copilot, pike-isse-13}. A theme of our research has been the
+application of lightweight formal methods to achieve high-assurance
+and we identify opportunities for closer collaboration between the RV
+and tool communities.
 
-
-
+%\paragraph{Outline:} This paper proceeds as follows. Section\ref{sec:copilot} introduces the Copilot RV
+%framework targeted at safety-critical 
+%systems. Sections~\ref{sec:req} and~\ref{sec:observ} focus
+%%on the problems of  specifying
+%high-assurance monitors. Section~\ref{sec:trace} i
