--- a/ISoLA16/opportunities.tex
+++ b/ISoLA16/opportunities.tex
@@ -3,7 +3,7 @@ High-assurance RV will only become practical if there is accompanying
 integrated tool support for verification and validation.  From the
 perspective of a researcher in high-assurance RV, engaging with the
 communities building static analysis tools and proof engines seems
-obvious.  Especially in light of the fact that regulatory bodies that
+obvious, especially in light of the fact that regulatory bodies that
 govern many safety-critical systems are increasingly willing to accept
 the analysis produced from such tools as evidence that can be applied to
 certification ~\cite{DO333}. Similarly, there are many features of RV
@@ -15,7 +15,7 @@ conforms to coding practices that are friendly to static analysis.
 Several of the challenges we have raised for high-assurance RV are
 really at the system level. Tools that can assist domain experts in
 validating safety properties are sorely needed.  As in our case study,
-the safety properties of cyber-physical systems are involve continuous
+the safety properties of cyber-physical systems involve continuous
 mathematics. While advances in \textsc{smt} solvers have been
 impressive, it is still necessary to often resort to using an  interactive
 theorem prover. There are many opportunities to design
@@ -40,4 +40,4 @@ it should be de rigueur.  In Copilot, we applied deductive
 verification to verify the correctness of the translation from
 specification to monitor code.  Monitors have many characteristics
 that make automatic proofs tractable, but the monitor synthesis must
-generate code that suitable for the tool being used.   
+generate code  suitable for the tool being used.   
